objects/Year_End_Assignment__c.object
<CustomObject>
    <description>This object tracks the re-assignment of customer to RM port / TM port or Pool, Refer out at the end of the year</description>
    <fields>
        <fullName>AH_Employee_ID__c</fullName>
        <label>AH Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Is_my_team__c</fullName>
        <formula>IF( 
OR 
(Final_Assigned_RM__c = null &amp;&amp; Owner:User.Employee_ID__c = $User.Employee_ID__c, 
Final_Assigned_RM__c &lt;&gt; null &amp;&amp; $User.Employee_ID__c =

CASE(Final_Assigned_RM__r.Profile.Name , 
&quot;SME-TM&quot;, Final_Assigned_RM__r.Manager.Employee_ID__c, 
Final_Assigned_RM__r.Manager.Manager.Employee_ID__c)), 
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Name__c</fullName>
        <label>AH Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_or_Refer_out__c</fullName>
        <label>Additional or Refer out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <formula>IF ( Final_Assigned_RM__c = null, Owner:User.Team_Name__c , 
IF (Final_Assigned_RM__r.Profile.Name = &quot;SME-RM&quot;, Final_Assigned_RM__r.Manager.Manager.Team_Name__c,  Final_Assigned_RM__r.Manager.Team_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code__c</fullName>
        <label>Business Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Desc__c</fullName>
        <label>Business Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ID_Unique__c</fullName>
        <externalId>true</externalId>
        <label>CIS ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assign_Port_Yearly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Case_12M__c</fullName>
        <label>Court Case 12M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Case_Current_Year__c</fullName>
        <label>Court Case Current Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Flag__c</fullName>
        <label>Credit Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <formula>IF (  Credit_Flag__c = &quot;Credit&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Pool__c</fullName>
        <formula>IF ( Port_Pool__c = &quot;Pool&quot;,1 ,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>CIS_ID__r.Name_Surname_TH__c</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPD6M__c</fullName>
        <label>DPD6M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_3__c</fullName>
        <label>Dummy 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_4__c</fullName>
        <label>Dummy 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_5__c</fullName>
        <label>Dummy 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Assigned_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Assigned/SelectedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Year_End_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Assigned_SelectedBy_Text__c</fullName>
        <formula>Final_Assigned_RM__r.FirstName &amp;&quot; &quot;&amp; Final_Assigned_RM__r.LastName</formula>
        <label>Final Assigned/SelectedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Employee_ID__c</fullName>
        <formula>Final_Assigned_RM__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Or_Not_Final__c</fullName>
        <formula>IF (  Final_Assigned_RM__c = null, &quot;Not Final&quot;, &quot;Final&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final / Not Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Pool__c</fullName>
        <formula>IF (  TEXT(Final_Port_Pool__c) = &quot;Pool&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Port_Pool__c</fullName>
        <label>Final Port/Pool</label>
        <picklist>
            <picklistValues>
                <fullName>Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Port__c</fullName>
        <formula>IF (  TEXT(Final_Port_Pool__c) = &quot;Port&quot;, 1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_RC_Code__c</fullName>
        <formula>Final_Assigned_RM__r.RC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Refer_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Refer Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Selected_Refer_Out__c</fullName>
        <formula>IF(TEXT(Status__c)=&quot;Submitted&quot;,
IF(LEN(TEXT(Refer_Out_Reason__c))&gt;0,&quot;Refer Out&quot;,&quot;Selected&quot;),
NULL)</formula>
        <label>Final Selected / Refer Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Service_RM_Text__c</fullName>
        <formula>Final_Service_RM__r.FirstName &amp;&quot; &quot;&amp; Final_Service_RM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Service RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Service_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Service RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Year_End_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Team__c</fullName>
        <formula>Final_Assigned_RM__r.Team_Name__c</formula>
        <label>Final Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Value_Flag__c</fullName>
        <label>High Value Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <formula>IF (  High_Value_Flag__c = &quot;Yes&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_1M__c</fullName>
        <label>Income 1M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NH_Employee_ID__c</fullName>
        <label>NH Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Is_my_team__c</fullName>
        <formula>IF( 
OR 
(Final_Assigned_RM__c = null &amp;&amp; Owner:User.Manager.Employee_ID__c = $User.Employee_ID__c, 
Final_Assigned_RM__c &lt;&gt; null &amp;&amp; $User.Employee_ID__c = 

CASE(Final_Assigned_RM__r.Profile.Name , 
&quot;SME-TM&quot;, Final_Assigned_RM__r.Manager.Manager.Employee_ID__c, 
Final_Assigned_RM__r.Manager.Manager.Manager.Employee_ID__c)), 
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Name__c</fullName>
        <label>NH Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPL12M__c</fullName>
        <label>NPL12M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <formula>IF ( Final_Assigned_RM__c = null, Owner:User.Manager.Team_Name__c , 
IF (Final_Assigned_RM__r.Profile.Name = &quot;SME-RM&quot;, Final_Assigned_RM__r.Manager.Manager.Manager.Team_Name__c, Final_Assigned_RM__r.Manager.Manager.Team_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Credit__c</fullName>
        <formula>IF (  Credit_Flag__c = &quot;Non Credit&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OD_Utilization_6M__c</fullName>
        <label>%OD Utilization 6M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_ID__c</fullName>
        <label>Owner Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Utilization_6M__c</fullName>
        <label>%PN Utilization 6M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <formula>IF(  Final_Assigned_RM__c = null,  Current_Pool__c,  Final_Pool__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Current__c</fullName>
        <formula>IF( Port_Pool__c = &quot;Port&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <label>Port / Pool</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <formula>IF ( Final_Assigned_RM__c = null,  Port_Current__c,  Final_Port__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Employee_ID__c</fullName>
        <label>RM Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Last_Visited__c</fullName>
        <label>RM Last Visited</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Name_Report__c</fullName>
        <formula>IF ( Final_Assigned_RM__c = null,  RM_Name__c, Final_Assigned_RM__r.FirstName &amp; &quot; &quot; &amp;  Final_Assigned_RM__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM Name Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Name__c</fullName>
        <label>RM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_RC_Code__c</fullName>
        <label>RM RC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refer_District__c</fullName>
        <label>Refer District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Amphur__c</fullName>
        <label>Final Refer Out: Amphur</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_By_Team__c</fullName>
        <label>Refer Out By Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Detail__c</fullName>
        <formula>CASE( TEXT(Refer_Out_Reason__c) , &quot;Other Team&quot;, Refer_Out_Team__c , &quot;Wrong Area&quot;, TEXT(Refer_Out_Tumbon__c) + &quot; &quot; + TEXT(Refer_Out_Amphur__c) + &quot; &quot; + TEXT(Refer_Out_Province__c) , &quot;Other Segment&quot;, TEXT(Refer_Out_Segment__c) , null)</formula>
        <label>Final Refer Out Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Province__c</fullName>
        <label>Final Refer Out: Province</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Reason__c</fullName>
        <label>Final Refer Out Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMLO List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exit Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Offense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Reason_fr_Other__c</fullName>
        <label>Refer Out Reason from other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Segment__c</fullName>
        <label>Final Refer Out Segment</label>
        <picklist>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Team__c</fullName>
        <label>Final Refer Out Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Out_Tumbon__c</fullName>
        <label>Final Refer Out: Tumbon</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refer_Province__c</fullName>
        <label>Refer Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_Sub_District__c</fullName>
        <label>Refer Sub District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refer_To_Team__c</fullName>
        <label>Refer To Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Affiliate__c</fullName>
        <label>ความสัมพันธ์: บ.ในเครือ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Authorized_Director__c</fullName>
        <label>ความสัมพันธ์: กรรมการมีอำนาจลงนาม</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Joint_Obligor__c</fullName>
        <label>ความสัมพันธ์: กู้ร่วม</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Spouse__c</fullName>
        <label>ความสัมพันธ์: คู่สมรส</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Stockholder__c</fullName>
        <label>ความสัมพันธ์: ผู้ถือหุ้น</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <label>Restriction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_1M__c</fullName>
        <label>SME BSCORE 1M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_2M__c</fullName>
        <label>SME BSCORE 2M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_BSCORE_3M__c</fullName>
        <label>SME BSCORE 3M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Limit_LI__c</fullName>
        <label>SME Limit - LI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SME_Limit_TF__c</fullName>
        <label>SME Limit - TF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SME_Wallet_Size__c</fullName>
        <label>SME Wallet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOW_SME_Exposure__c</fullName>
        <label>%SOW (SME Exposure)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Segment_Original__c</fullName>
        <label>Segment (Original)</label>
        <picklist>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Proposed__c</fullName>
        <label>Segment (Proposed)</label>
        <picklist>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Count__c</fullName>
        <label>Selected Count</label>
        <summaryForeignKey>Year_End_Assignment_Selection__c.Year_End_Assignment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <formula>CASE( Final_Assigned_RM__c , 
&quot;&quot;, &quot;Not Selected&quot;, 
 IF( Final_Refer_Out__c , &quot;Refer Out&quot;,  TEXT(Final_Port_Pool__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Employee_ID__c</fullName>
        <label>Service RM Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Name__c</fullName>
        <label>Service RM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_District__c</fullName>
        <label>Sub District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDR_12M__c</fullName>
        <label>TDR 12M</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Utilization_6M__c</fullName>
        <label>%TF Utilization 6M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TM_Employee_ID__c</fullName>
        <label>TM Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Is_my_team__c</fullName>
        <formula>IF(
OR
(Final_Assigned_RM__c = null &amp;&amp; Team__c =  $User.Team_Name__c,
Final_Assigned_RM__c &lt;&gt; null &amp;&amp; Final_Assigned_RM__r.Team_Name__c = $User.Team_Name__c),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM : Is my team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Name__c</fullName>
        <label>TM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>IF (  Final_Assigned_RM__c = null, Team__c,  Final_Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Exposure__c</fullName>
        <label>Total SME Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Limit__c</fullName>
        <label>Total SME Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_SME_Out__c</fullName>
        <label>Total SME Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UW_Color_Group__c</fullName>
        <label>UW Color Group</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visited_Count__c</fullName>
        <label>Visited Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Year-End Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RM_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Port_Pool__c</columns>
        <columns>Segment_Proposed__c</columns>
        <columns>Final_Assigned_RM__c</columns>
        <columns>Final_Team__c</columns>
        <columns>Final_Port_Pool__c</columns>
        <columns>Selected_Count__c</columns>
        <columns>Final_RC_Code__c</columns>
        <columns>Final_Service_RM__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Assigned</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RM_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Port_Pool__c</columns>
        <columns>Segment_Proposed__c</columns>
        <columns>Final_Assigned_RM__c</columns>
        <columns>Final_Team__c</columns>
        <columns>Final_Port_Pool__c</columns>
        <columns>Selected_Count__c</columns>
        <columns>Final_RC_Code__c</columns>
        <columns>Final_Service_RM__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Assigned_RM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Final_Refer_Out__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Assigned</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Refer_Out</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RM_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Port_Pool__c</columns>
        <columns>Segment_Proposed__c</columns>
        <columns>Final_Assigned_RM__c</columns>
        <columns>Final_Team__c</columns>
        <columns>Final_Refer_Out__c</columns>
        <columns>Refer_Out_Reason__c</columns>
        <columns>Refer_Out_Detail__c</columns>
        <columns>Selected_Count__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Assigned_RM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Final_Refer_Out__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Refer Out</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Submitted</fullName>
        <columns>AH_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RM_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Port_Pool__c</columns>
        <columns>Selected_Count__c</columns>
        <columns>Final_Assigned_RM__c</columns>
        <columns>Final_Team__c</columns>
        <columns>Final_Port_Pool__c</columns>
        <columns>Refer_Out_Reason__c</columns>
        <columns>Final_Service_RM__c</columns>
        <columns>NH_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Assigned_RM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Final_Refer_Out__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Submitted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Not_Refer_Out</fullName>
        <columns>NAME</columns>
        <columns>CIS_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>RM_Name__c</columns>
        <columns>Team__c</columns>
        <columns>Port_Pool__c</columns>
        <columns>Segment_Proposed__c</columns>
        <columns>Final_Assigned_RM__c</columns>
        <columns>Final_Team__c</columns>
        <columns>Final_Port_Pool__c</columns>
        <columns>Selected_Count__c</columns>
        <columns>Final_RC_Code__c</columns>
        <columns>Final_Service_RM__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>AH_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Assigned_RM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>AH_Name__c</field>
            <operation>contains</operation>
        </filters>
        <label>All Unassigned/Not Refer Out</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Ref-{00000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Year-End Assignment</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CIS_ID_must_be_same_as_CIS_Unique_ID</fullName>
        <active>true</active>
        <errorConditionFormula>CIS_ID__r.Name &lt;&gt; CIS_ID_Unique__c</errorConditionFormula>
        <errorDisplayField>CIS_ID_Unique__c</errorDisplayField>
        <errorMessage>CIS ID is different from CIS Unique ID</errorMessage>
    </validationRules>
</CustomObject>